src/objects/Community_Service_Project__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <picklist>
            <picklistValues>
                <fullName>Antrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fermanagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilkenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leitrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roscommon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tipperary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyrone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westmeath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_or_Individual__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_times_site_phoned__c</fullName>
        <label>No. of times site phoned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_visits_by_TEO__c</fullName>
        <label>No. of visits by TEO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Service Projects</relationshipLabel>
        <relationshipName>Community_Service_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <inlineHelpText>Please enter a Postcode when applicable</inlineHelpText>
        <label>Postcode</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Dublin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Capacity__c</fullName>
        <label>Site Capacity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Suitability__c</fullName>
        <label>Site Suitability</label>
        <picklist>
            <picklistValues>
                <fullName>Not Suitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Service Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSP-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Service Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Capacity_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Site_Capacity__c &gt;8</errorConditionFormula>
        <errorDisplayField>Site_Capacity__c</errorDisplayField>
        <errorMessage>Site Capacity cannot exceed 8</errorMessage>
    </validationRules>
</CustomObject>